# Ethereum-Bot-Detection

./: .gitignore  Changelog.md  README.md  config_in_use.toml  docker-compose.yml  dockerfile  pipeline.py  pyproject.toml  requirements.txt  tools.py  update_latex.py
configs/: dev.toml  dev2.toml  large.toml  largesample1.toml  largesample2.toml  largesample3.toml  largesample4.toml  test.toml
credentials/: etherscan.json  neo4j.json
data/: BNB_price.csv  wallets_to_annotate.csv  wallets_to_annotate_manual.xlsx
data_lightweight/: event_signatures_with_index.csv  function_signatures_with_index.csv  label_mapping.csv  multicall_execute_signatures_with_index.csv  multicall_function_signatures_with_index.csv  token_addresses.csv  vote_detailed.csv
mev_inspect/: utils.py
models/: col_names.pkl  modeller_large.pkl  randomforest_pipeline.pkl
powerpoints/: experiments.pptx  experiments2.pptx  feature_engineering_overview.pptx  feature_engineering_overview2.pptx  overview_CEX.pptx  overview_data_methods.pptx  overview_data_methods_paper.pptx  overview_dataset_creation.pptx  overview_feature_engineering_module.pptx  overview_longitudinal_study.pptx  overview_paper_too_loaded.pptx  overview_process.pptx  ratio_shifts.pptx  ruler.pptx  state.pptx  taxonomy.pptx  taxonomy2.pptx  taxonomy22.pptx  taxonomy2_paper.pptx  taxonomy2_paper_smaller.pptx  taxonomy2old.pptx  teaser.pptx  thumbnail_paper.pptx  truncated_transaction_history.pptx
scripts/: distribution_analysis.py  download_etherscan.py  eigenphi.py  get_n_clusters.py  get_price_data.py  handle_compressed_csvs.py  (+13 more)
(+217 files in other folders)
