[project]
name = "ethereum-bot-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ccxt>=4.4.40",
    "dash>=2.18.2",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy~=1.23.2",
    "pandas~=1.5.2",
    "pdfcropmargins>=2.1.4",
    "plotly>=5.24.1",
    "psycopg2>=2.9.10",
    "pyarrow>=18.1.0",
    "pydantic~=1.9.1",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
    "scikit-learn~=1.1.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
    "umap-learn~=0.5.1",
    "web3>=5.31.3",
    "xgboost>=1.7.6",
]
